--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div>
-    <h1>Take me to the lakes where good ideas go to die</h1>
+    <h1>Unfinished Articles</h1>
     <p>a safe space for works unburdened by deadlines</p>
   </div>
 </body>
