--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     <p>Hosted on GitHub Pages</p>
     <p>Spotted a typo? <a href="https://github.com/wafaajaunnoo/unfinishedarticles/issues" target="_blank">Open an issue.</a></p>
   </footer>
-
+<script src="assets/script.js"></script>
 </body>
 </html>
