--- a/index.html
+++ b/index.html
@@ -1,58 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport">
-  <title>Unfinished Articles</title>
-  <link rel="icon" type="image/svg+xml" href="/assets/styles.css"/>
-  <link rel="stylesheet" href="assets/styles.css"/>
-  
-<body>
- <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-links">
-        <a href="index.html">About</a>
-        <a href="_posts/articles">Articles</a>
-        <a href="_posts/letters">The Handwritten Letter Project</a>
-      </div>
-    </div>
-  </nav>
-  
-  <header>
-    <h1>Unfinished Articles</h1>
-    <br>
-    <p class="tagline">a safe space for works unburdened by deadlines</p>
-  </header>
-
-  <main>
-    <section class="page-intro">
-      <h2 class="page-intro-heading">
-        completion is a social construct. not everything needs an ending.
-      </h2>
-      <p>
-        This site is a digital notebook of sorts. A space where thoughts, half-proofs, and questions are allowed to remain unfinished.
-      </p>
-      <p> <b>Inside:</b> unfinished ideas in mathematics, computer science, and philosophy. </p>
-      <p> <b>Bonus:</b> the Handwritten Letter Project. </p>
-      <p> Unpolished and unconcerned with the illusion of completion. </p>
-   
-    </section>
-  </main>
-  
 ---
 layout: default
+title: Unfinished Articles
 ---
-{% for post in site.posts %}
-  <a href="{{ post.url }}">{{ post.title }}</a> — {{ post.date | date: "%B %d, %Y" }}
-  {% if post.categories %} • Filed under: {{ post.categories | join: ', ' }}{% endif %}
-{% endfor %}
 
-  
-  <footer>
-    <p>© 2025 Unfinished Articles</p>
-    <p>Hosted on GitHub Pages</p>
-    <p>Spotted a typo? <a href="https://github.com/wafaajaunnoo/unfinishedarticles/issues" target="_blank">Open an issue.</a></p>
-  </footer>
-<script src="assets/script.js"></script>
-</body>
-</html>
+<header>
+  <h1>Unfinished Articles</h1>
+  <p class="tagline">a safe space for works unburdened by deadlines</p>
+</header>
+
+<main>
+  <section class="page-intro">
+    <h2>completion is a social construct. not everything needs an ending.</h2>
+    <p>This site is a digital notebook of sorts. A space where thoughts, half-proofs, and questions are allowed to remain unfinished.</p>
+    <p><b>Inside:</b> unfinished ideas in mathematics, computer science, and philosophy.</p>
+    <p><b>Bonus:</b> the Handwritten Letter Project.</p>
+    <p>Unpolished and unconcerned with the illusion of completion.</p>
+  </section>
+
+  <section class="posts-list">
+    {% for post in site.posts %}
+      <article>
+        <a href="{{ post.url }}">{{ post.title }}</a> — {{ post.date | date: "%B %d, %Y" }}
+        {% if post.categories %} • Filed under: {{ post.categories | join: ', ' }}{% endif %}
+      </article>
+    {% endfor %}
+  </section>
+</main>
