Restore CSS styling

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 title: Home
 ---
+
+<head>
+  <meta charset="utf-8">
+  <title>{{ site.title }}</title>
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+</head>
+
 <section class="page-intro">
   <h2 class="page-intro-heading">
     completion is a social construct. not everything needs an ending.
