--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <head>
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
 </head>
 
 <section class="page-intro">
