--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ title: Home
     This site is a digital notebook of sorts. A space where thoughts, half-proofs, and questions are allowed to remain unfinished.
   </p>
   <p>
-    Inside: unfinished ideas in mathematics, computer science, and philosophy. 
+    Inside: Unfinished ideas in mathematics, computer science, and philosophy. t
+    Bonus: The Handwritten Letter Project
     Unpolished and unconcerned with the illusion of completion.
   </p>
 </section>
