--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@ title: Home
   <p>
     This site is a digital notebook of sorts. A space where thoughts, half-proofs, and questions are allowed to remain unfinished.
   </p>
-  <p>
+  <p> 
     <b>Inside:</b> Unfinished ideas in mathematics, computer science, and philosophy. 
-    <b>Bonus:</b> The Handwritten Letter Project
-    Unpolished and unconcerned with the illusion of completion.
+  </p>
+  <p> 
+    <b>Bonus:</b> The Handwritten Letter Project. 
+  </p>
+  <p> 
+    Unpolished and unconcerned with the illusion of completion. 
   </p>
 </section>
 
