--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@ title: Home
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
 </head>
 
+<header>
+  Unfinished Articles
+  <h2 class="tagline">a safe space for works unburdened by deadlines</h2>
+</header>
+
 <section class="page-intro">
   <h2 class="page-intro-heading">
     completion is a social construct. not everything needs an ending.
