--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
 </head>
 
 <header>
-  Unfinished Articles
+  <h1>Unfinished Articles</h1>
   <h2 class="tagline">a safe space for works unburdened by deadlines</h2>
 </header>
 
